Fixed some styling in feed like how errors show, the menu now has some styling also, date is now visible under the author name + it updated if we update the post

--- a/client/src/components/Feed/Post/style.sass
+++ b/client/src/components/Feed/Post/style.sass
@@ -5,6 +5,12 @@
             margin-bottom: 4em
             background: #E5E5E5
             border-radius: 0.5em
+            .error-container
+                display: flex
+                justify-content: center
+                span
+                    padding: 2em 0 0 0
+                    text-align: center
             .top-section-edit
                 justify-content: space-between
             .top-section
@@ -13,16 +19,26 @@
                 align-items: center
                 flex-direction: row
                 .user-post-info
-                    display: flex 
+                    display: flex
                     align-items: center
+                    flex-direction: row
                     img 
                         width: 4em
                         border-radius: 50%
-                    p
-                        margin-left: 1em
-                        font-weight: normal
-                        font-size: 1.6em
-                        color: #5C5C5C
+                    .user-info
+                        display: flex
+                        margin-bottom: 2em
+                        flex-direction: column
+                        align-items: center
+                        p
+                            margin-left: 1em
+                            font-weight: normal
+                            font-size: 1.6em
+                            color: #5C5C5C
+                            margin-bottom: 0
+                        span
+                            font-weight: 900
+                            color: #21B994
                 .user-post-settings
                     button
                         border: 0
@@ -31,9 +47,23 @@
                         i
                             color: #21B994
                             font-size: 1.4em
-                    .user-post-settings-popup
+                .user-post-settings-popup
+                    display: flex
+                    align-content: center
+                    position: absolute
+                    right: 21.5%
+                    border-radius: 0px 1.5em 1.5em 1.5em
+
+                    color: #F1F1F1
+                    font-weight: 900
+                    background: #21B994
+                    ul
+                        margin: 0
+                        padding: 2em
+                        list-style: none
                         display: flex
-                        position: absolute
+                        flex-direction: column
+                        align-items: center
             .content-section
                 padding: 0em 2.5em 0em 2.5em
                 p
