--- a/client/src/components/Feed/style.sass
+++ b/client/src/components/Feed/style.sass
@@ -27,6 +27,10 @@
 
         background: #E5E5E5
         border-radius: 0.5em
+        span
+            font-weight: 900
+            padding: 1em 0 0 0
+            text-align: center
         form
             display: flex
             flex-direction: column
